fix: fixed partially shown line and made sidebar available on mobile

--- a/css/blogcard.css
+++ b/css/blogcard.css
@@ -36,7 +36,19 @@
     grid-row-end: 9;
     grid-column-start: 4;
     grid-column-end: 10;
+    
+
+}
+
+.blogcard-excerpt {
+    width: 100%;
+    height: 15ex;
+    max-height: 100%;
+
+
     overflow: hidden;
+    overflow-wrap: anywhere;
+    text-overflow: ellipsis;
 }
 
 .blogcard-readmore {
@@ -45,9 +57,6 @@
     grid-column-start: 4;
     grid-column-end: 11;
 
-    display: inline;
-    background-color: transparent;
+    background: linear-gradient(to bottom, rgba(0,0,0,0), rgba(211, 211, 211, 1));
     border: none;
-    margin: auto;
-    padding: auto;
 }
