--- a/css/header.css
+++ b/css/header.css
@@ -28,8 +28,3 @@
     text-decoration-line: underline;
 }
 
-@media (max-width: 768px) {
-    * {
-        font-size: small;
-    }
-}
